<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.AddStoryActivity">

    <ImageView
        android:id="@+id/imageUp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="150dp"
        android:id="@+id/buttonCam"
        android:layout_height="50dp"
        android:layout_marginTop="296dp"
        android:orientation="vertical"
        android:text="@string/photo"
        app:layout_constraintTop_toTopOf="@id/imageUp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="296dp"
        android:text="@string/galery"
        app:layout_constraintTop_toTopOf="@id/imageUp"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="105dp"
        app:layout_constraintLeft_toRightOf="@id/buttonCam"/>

    <TextView
        android:id="@+id/tv_addDesc"
        android:layout_width="354dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonCam"
        app:layout_constraintTop_toBottomOf="@+id/buttonCam" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:hint="@string/desc_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/buttonCam"
        app:layout_constraintTop_toBottomOf="@+id/tv_addDesc"/>
    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_desc"
        app:layout_constraintStart_toStartOf="@+id/et_desc"
        app:layout_constraintTop_toBottomOf="@+id/et_desc" />

    <ProgressBar
        android:id="@+id/progressBarLayout"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>